Feat:Manage-Profile-Form-Design Completed

--- a/src/app/manage-profile-container/manage-profile-presentation/manage-profile-presentation.component.html
+++ b/src/app/manage-profile-container/manage-profile-presentation/manage-profile-presentation.component.html
@@ -23,7 +23,7 @@
                 </div>
             </div>
             <div class="col-12  col-md-6 col-lg-8 ">
-                <div class="border p-4 mt-3 mt-md-0">
+                <div class="border p-2 p-sm-4 mt-3 mt-md-0">
                     <h5>Profile details</h5>
                         <!-- First Row -->
                         <div class="row">
@@ -118,7 +118,7 @@
                         <!-- End Third Row -->
                          <!-- submit and Cancel button -->
                   <div class="button my-5 my-lg-3 d-flex justify-content-end ">
-                     <button type="button" class="btn btn-outline-info me-3">Cancel</button>
+                     <button type="button" class="btn btn-outline-info me-2 me-sm-3">Cancel</button>
                       <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">Book Now</button>
                 </div>
                 </div>
