feat:Booking-History-Page-Design completed

--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -11,7 +11,7 @@
       <ul class="nav">
         <li class="nav-item d-flex align-items-center  ">
           <img src="./../../../../assets/images/home.svg" alt="home-icon" />
-          <a><span class="nav-link fw-light ms-0 text-primary" routerLink="/">Home</span></a>
+          <a routerLink="/" routerLinkActive="text-primary"><span class="nav-link fw-light ms-0 text-primary" >Home</span></a>
         </li>
         <li class="nav-item d-flex align-items-center ">
           <img src="./../../../../assets/images/Studio.svg" alt="studio-icon" />
@@ -23,7 +23,7 @@
         </li>
         <li class="nav-item d-flex align-items-center ms-4">
           <img src="./../../../../assets/images/noun-calendar-2095603 4.svg" alt="BookingHistory-icon" />
-          <a href="http://"><span class="nav-link fw-light ">Booking History</span></a>
+          <a routerLink="/booking-history" ><span class="nav-link fw-light ">Booking History</span></a>
         </li>
       </ul>
     </div>
