--- a/src/app/shared/booking-history/booking-history.component.html
+++ b/src/app/shared/booking-history/booking-history.component.html
@@ -1,1 +1,21 @@
-<p>booking-history works!</p>
+<!-- booking History -->
+<section class="booking-history h-100 p-3 p-sm-4">
+    <div class="d-flex align-items-center justify-content-between">
+        <h4>Booking History</h4>
+        <a class="text-decoration-underline">Clear History </a>
+    </div>
+    <div class="border d-flex rounded mt-3">
+        <div class="bg-primary d-flex flex-column align-items-center p-1  px-2 px-sm-4 rounded-start">
+            <span class="text-white fs-8">12</span>
+            <span class="text-white fs-8">Dec</span>
+        </div>
+        <div class="d-flex align-items-center bg-white  justify-content-between w-100 px-1 px-sm-3 rounded" >
+            <span class="book-title fs-8">You Booked <strong>Nacdcdcdcdddme</strong> For Event.</span>
+            <span class="book-date text-secondary-gray fs-8">Book On:10/05/2023</span>
+            <div class="d-flex align-items-center d-inline-block">
+                <span class="book-status fs-8 ms-2 ps-sm-0">Accepted</span>
+                <span class="icon-delete fs-4 ms-1 ms-sm-4"></span>
+            </div>
+        </div>
+    </div>
+</section>
