--- a/src/app/studio/manage-studio-profile-container/manage-studio-profile-presentation/manage-studio-profile-presentation.component.html
+++ b/src/app/studio/manage-studio-profile-container/manage-studio-profile-presentation/manage-studio-profile-presentation.component.html
@@ -1,1 +1,203 @@
-<p>manage-studio-profile-presentation works!</p>
+<div class="h-100 p-4 overflow-auto">
+    <h5>Manage Studio Profile</h5>
+    <form action="">
+        <div class="row">
+            <div class="col-12 col-sm-4">
+                <div class="border p-4">
+                    <h6 class="fw-bold">Add Studio Images</h6>
+                    <div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-8 mt-4">
+                <div class="border p-4">
+                    <h6 class="fw-bold">Studio Details</h6>
+                    <!-- First Row -->
+                    <div class="row">
+                        <!-- Studio Name -->
+                        <div class="col-12 col-sm-6">
+                            <div class="form-group mt-3">
+                                <label for="StudioName" class="fw-bold ">Studio Name <span class="text-danger">
+                                        *</span></label>
+                                <input type="text" class="form-control" id="StudioName" placeholder="Studio Name">
+                            </div>
+                        </div>
+                        <!-- End  Studio Name -->
+                        <!-- Address -->
+                        <div class="col-12  col-sm-6">
+                            <div class="form-group mt-3">
+                                <label for="Address" class="fw-bold ">Address <span class="text-danger">
+                                        *</span></label>
+                                <input type="text" class="form-control" id="Address" placeholder="Address">
+                            </div>
+                        </div>
+                        <!-- End Address -->
+                    </div>
+                    <!-- End Second Row -->
+                    <div class="row">
+                        <!--Studio Description -->
+                        <div class="col-6 ">
+                            <div class="mt-3">
+                                <label for="StudioDescription" class="fw-bold ">Studio Description<span
+                                        class="text-danger">
+                                        *</span></label>
+                                <textarea class="form-control" id="StudioDescription" rows="3"
+                                    placeholder="Studio Description"></textarea>
+                            </div>
+                        </div>
+                        <!-- End  Studio Description -->
+                        <!--Hardware & Equipments  -->
+                        <div class="col-6">
+                            <div class="mt-3">
+                                <label for="Hardware&Equipments" class="fw-bold ">Hardware & Equipments <span
+                                        class="text-danger">
+                                        *</span></label>
+                                <textarea class="form-control" id="Hardware&Equipments"
+                                    placeholder="Hardware&Equipments" rows="3"></textarea>
+                            </div>
+                        </div>
+                        <!-- End Hardware & Equipments -->
+                    </div>
+                    <!-- End Second Row -->
+                    <!-- Third  Row -->
+                    <div class="row">
+                        <!-- Select Country -->
+                        <div class="col-12 col-sm-6">
+                            <div class="form-group mt-3">
+                                <label for="Country" class="fw-bold ">Select Country<span class="text-danger">
+                                        *</span></label>
+                                <ng-select placeholder="india">
+                                    <ng-option *ngFor="let user of userTypes"
+                                        [value]="user.id">{{user.name}}</ng-option>
+                                </ng-select>
+                            </div>
+                        </div>
+                        <!-- End Select Country  -->
+                        <!-- Select State -->
+                        <div class="col-6 col-sm-3">
+                            <div class="form-group mt-3">
+                                <div class="form-group mt-3">
+                                    <label for="state" class="fw-bold ">Select State<span class="text-danger">
+                                            *</span></label>
+                                    <ng-select placeholder="Select State">
+                                        <ng-option *ngFor="let user of userTypes"
+                                            [value]="user.id">{{user.name}}</ng-option>
+                                    </ng-select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End State -->
+                        <!-- Select City -->
+                        <div class="col-6 col-sm-3">
+                            <div class="form-group mt-3">
+                                <div class="form-group mt-3">
+                                    <label for="City" class="fw-bold ">Select City<span class="text-danger">
+                                            *</span></label>
+                                    <ng-select placeholder="Select City">
+                                        <ng-option *ngFor="let user of userTypes"
+                                            [value]="user.id">{{user.name}}</ng-option>
+                                    </ng-select>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- End City -->
+                    </div>
+                    <!-- End Third Row -->
+                    <!-- Four -->
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="row">
+                                <!-- Select From -->
+                                <label class="fw-bold mt-3">Select Studio Days<span class="text-danger">
+                                        *</span></label>
+                                <div class="col-12 col-sm-6">
+                                    <div class="form-group mt-3">
+                                        <label for="From" class="fw-bold ">From</label>
+                                        <ng-select placeholder="From" id="From">
+                                            <ng-option *ngFor="let user of userTypes"
+                                                [value]="user.id">{{user.name}}</ng-option>
+                                        </ng-select>
+                                    </div>
+                                </div>
+                                <!-- End Select From -->
+                                <!-- Select To -->
+                                <div class="col-6 col-sm-6">
+                                    <div class="form-group mt-3">
+                                        <label for="To" class="fw-bold ">To</label>
+                                        <ng-select placeholder="To" id="To">
+                                            <ng-option *ngFor="let user of userTypes"
+                                                [value]="user.id">{{user.name}}</ng-option>
+                                        </ng-select>
+                                    </div>
+                                </div>
+                                <!-- End to -->
+                            </div>
+
+                        </div>
+                        <div class="col-6">
+                            <div class="row">
+                                <!-- Select From -->
+                                <label class="fw-bold mt-3">Select Studio Hours<span class="text-danger">
+                                        *</span></label>
+                                <div class="col-12 col-sm-6">
+                                    <div class="form-group mt-3">
+                                        <label for="From" class="fw-bold">From</label>
+                                        <ng-select placeholder="From" id="From">
+                                            <ng-option *ngFor="let user of userTypes"
+                                                [value]="user.id">{{user.name}}</ng-option>
+                                        </ng-select>
+                                    </div>
+                                </div>
+                                <!-- End Select From -->
+                                <!-- Select To -->
+                                <div class="col-6 col-sm-6">
+                                    <div class="form-group mt-3">
+                                        <label for="To" class="fw-bold ">To</label>
+                                        <ng-select placeholder="To" id="To">
+                                            <ng-option *ngFor="let user of userTypes"
+                                                [value]="user.id">{{user.name}}</ng-option>
+                                        </ng-select>
+                                    </div>
+                                </div>
+                                <!-- End to -->
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End Four -->
+                    <!-- checkbox -->
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="form-check mt-3">
+                                <input class="form-check-input" type="checkbox" value="" id="RecordingRoom" (click)="checkBox($event)">
+                                <label class="form-check-label" for="RecordingRoom">
+                                    Recording Room
+                                </label>
+                                <input type="text" class="ms-3 " id="RecordingRoom" [ngClass]="checkValue== 'RecordingRoom'?'d-block':'d-none'" >
+                            </div>
+                            <div class="form-check mt-2">
+                                <input class="form-check-input" type="checkbox" value="" id="JammingRoom" (click)="checkBox($event)">
+                                <label class="form-check-label" for="JammingRoom">
+                                    Jamming Room
+                                </label>
+                                <input type="text" class="ms-3 " id="JammingRoom" [ngClass]="checkValue =='JammingRoom' ?'d-block':'d-none'">
+                            </div>
+                            <div class="form-check mt-2">
+                                <input class="form-check-input" type="checkbox" value="" id="Mixing" (click)="checkBox($event)">
+                                <label class="form-check-label" for="Mixing">
+                                    Mixing and Mastering Room
+                                </label>
+                                <input type="text" class="ms-3 " id="Mixing" [ngClass]="checkValue == 'Mixing' ?'d-block':'d-none'">
+                            </div>
+                        </div>
+                    </div>
+                    <!-- submit and Cancel button -->
+                    <div class="button my-2 my-lg-5 d-flex justify-content-end ">
+                        <button type="button" class="btn btn-outline-info me-3 ">Cancel</button>
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">Save</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+</div>
