--- a/src/app/studio/manage-studio-profile-container/manage-studio-profile-presentation/manage-studio-profile-presentation.component.html
+++ b/src/app/studio/manage-studio-profile-container/manage-studio-profile-presentation/manage-studio-profile-presentation.component.html
@@ -2,12 +2,10 @@
     <h5>Manage Studio Profile</h5>
     <form action="">
         <div class="row">
-            <div class="col-12 col-sm-4">
+            <div class="col-12 col-sm-4 mt-4">
                 <div class="border p-4">
                     <h6 class="fw-bold">Add Studio Images</h6>
-                    <div>
-
-                    </div>
+                    <div></div>
                 </div>
             </div>
             <div class="col-12 col-sm-8 mt-4">
@@ -18,18 +16,17 @@
                         <!-- Studio Name -->
                         <div class="col-12 col-sm-6">
                             <div class="form-group mt-3">
-                                <label for="StudioName" class="fw-bold ">Studio Name <span class="text-danger">
+                                <label for="StudioName" class="fw-bold">Studio Name <span class="text-danger">
                                         *</span></label>
-                                <input type="text" class="form-control" id="StudioName" placeholder="Studio Name">
+                                <input type="text" class="form-control" id="StudioName" placeholder="Studio Name" />
                             </div>
                         </div>
                         <!-- End  Studio Name -->
                         <!-- Address -->
-                        <div class="col-12  col-sm-6">
+                        <div class="col-12 col-sm-6">
                             <div class="form-group mt-3">
-                                <label for="Address" class="fw-bold ">Address <span class="text-danger">
-                                        *</span></label>
-                                <input type="text" class="form-control" id="Address" placeholder="Address">
+                                <label for="Address" class="fw-bold">Address <span class="text-danger"> *</span></label>
+                                <input type="text" class="form-control" id="Address" placeholder="Address" />
                             </div>
                         </div>
                         <!-- End Address -->
@@ -37,11 +34,10 @@
                     <!-- End Second Row -->
                     <div class="row">
                         <!--Studio Description -->
-                        <div class="col-6 ">
+                        <div class="col-6">
                             <div class="mt-3">
-                                <label for="StudioDescription" class="fw-bold ">Studio Description<span
-                                        class="text-danger">
-                                        *</span></label>
+                                <label for="StudioDescription" class="fw-bold">Studio Description<span
+                                        class="text-danger"> *</span></label>
                                 <textarea class="form-control" id="StudioDescription" rows="3"
                                     placeholder="Studio Description"></textarea>
                             </div>
@@ -50,9 +46,8 @@
                         <!--Hardware & Equipments  -->
                         <div class="col-6">
                             <div class="mt-3">
-                                <label for="Hardware&Equipments" class="fw-bold ">Hardware & Equipments <span
-                                        class="text-danger">
-                                        *</span></label>
+                                <label for="Hardware&Equipments" class="fw-bold">Hardware & Equipments
+                                    <span class="text-danger"> *</span></label>
                                 <textarea class="form-control" id="Hardware&Equipments"
                                     placeholder="Hardware&Equipments" rows="3"></textarea>
                             </div>
@@ -65,11 +60,12 @@
                         <!-- Select Country -->
                         <div class="col-12 col-sm-6">
                             <div class="form-group mt-3">
-                                <label for="Country" class="fw-bold ">Select Country<span class="text-danger">
+                                <label for="Country" class="fw-bold">Select Country<span class="text-danger">
                                         *</span></label>
                                 <ng-select placeholder="india">
-                                    <ng-option *ngFor="let user of userTypes"
-                                        [value]="user.id">{{user.name}}</ng-option>
+                                    <ng-option *ngFor="let user of userTypes" [value]="user.id">{{
+                                        user.name
+                                        }}</ng-option>
                                 </ng-select>
                             </div>
                         </div>
@@ -78,11 +74,11 @@
                         <div class="col-6 col-sm-3">
                             <div class="form-group mt-3">
                                 <div class="form-group mt-3">
-                                    <label for="state" class="fw-bold ">Select State<span class="text-danger">
+                                    <label for="state" class="fw-bold">Select State<span class="text-danger">
                                             *</span></label>
                                     <ng-select placeholder="Select State">
-                                        <ng-option *ngFor="let user of userTypes"
-                                            [value]="user.id">{{user.name}}</ng-option>
+                                        <ng-option *ngFor="let user of userTypes" [value]="user.id">{{ user.name
+                                            }}</ng-option>
                                     </ng-select>
                                 </div>
                             </div>
@@ -92,11 +88,11 @@
                         <div class="col-6 col-sm-3">
                             <div class="form-group mt-3">
                                 <div class="form-group mt-3">
-                                    <label for="City" class="fw-bold ">Select City<span class="text-danger">
+                                    <label for="City" class="fw-bold">Select City<span class="text-danger">
                                             *</span></label>
                                     <ng-select placeholder="Select City">
-                                        <ng-option *ngFor="let user of userTypes"
-                                            [value]="user.id">{{user.name}}</ng-option>
+                                        <ng-option *ngFor="let user of userTypes" [value]="user.id">{{ user.name
+                                            }}</ng-option>
                                     </ng-select>
                                 </div>
                             </div>
@@ -113,10 +109,10 @@
                                         *</span></label>
                                 <div class="col-12 col-sm-6">
                                     <div class="form-group mt-3">
-                                        <label for="From" class="fw-bold ">From</label>
+                                        <label for="From" class="fw-bold">From</label>
                                         <ng-select placeholder="From" id="From">
-                                            <ng-option *ngFor="let user of userTypes"
-                                                [value]="user.id">{{user.name}}</ng-option>
+                                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{ user.name
+                                                }}</ng-option>
                                         </ng-select>
                                     </div>
                                 </div>
@@ -124,16 +120,15 @@
                                 <!-- Select To -->
                                 <div class="col-6 col-sm-6">
                                     <div class="form-group mt-3">
-                                        <label for="To" class="fw-bold ">To</label>
+                                        <label for="To" class="fw-bold">To</label>
                                         <ng-select placeholder="To" id="To">
-                                            <ng-option *ngFor="let user of userTypes"
-                                                [value]="user.id">{{user.name}}</ng-option>
+                                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{ user.name
+                                                }}</ng-option>
                                         </ng-select>
                                     </div>
                                 </div>
                                 <!-- End to -->
                             </div>
-
                         </div>
                         <div class="col-6">
                             <div class="row">
@@ -144,8 +139,8 @@
                                     <div class="form-group mt-3">
                                         <label for="From" class="fw-bold">From</label>
                                         <ng-select placeholder="From" id="From">
-                                            <ng-option *ngFor="let user of userTypes"
-                                                [value]="user.id">{{user.name}}</ng-option>
+                                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{ user.name
+                                                }}</ng-option>
                                         </ng-select>
                                     </div>
                                 </div>
@@ -153,10 +148,10 @@
                                 <!-- Select To -->
                                 <div class="col-6 col-sm-6">
                                     <div class="form-group mt-3">
-                                        <label for="To" class="fw-bold ">To</label>
+                                        <label for="To" class="fw-bold">To</label>
                                         <ng-select placeholder="To" id="To">
-                                            <ng-option *ngFor="let user of userTypes"
-                                                [value]="user.id">{{user.name}}</ng-option>
+                                            <ng-option *ngFor="let user of userTypes" [value]="user.id">{{ user.name
+                                                }}</ng-option>
                                         </ng-select>
                                     </div>
                                 </div>
@@ -167,34 +162,57 @@
                     <!-- End Four -->
                     <!-- checkbox -->
                     <div class="row">
-                        <div class="col-12">
-                            <div class="form-check mt-3">
-                                <input class="form-check-input" type="checkbox" value="" id="RecordingRoom" (click)="checkBox($event)">
-                                <label class="form-check-label" for="RecordingRoom">
-                                    Recording Room
-                                </label>
-                                <input type="text" class="ms-3 " id="RecordingRoom" [ngClass]="checkValue== 'RecordingRoom'?'d-block':'d-none'" >
+                        <div class="col-8">
+                            <div class="d-flex align-items-center">
+                                <div class="form-check mt-3">
+                                    <input class="form-check-input" type="checkbox" value="" id="RecordingRoom"
+                                        #RecordingRoom (change)="checkBox(RecordingRoom.id)" />
+                                    <label class="form-check-label" for="RecordingRoom">
+                                        Recording Room
+                                    </label>
+                                </div>
+                                <div class="form-group mt-3">
+                                    <input type="text" class="form-control ms-4" placeholder="Enter Amount"
+                                        [ngClass]="checkValue ? 'd-block' : 'd-none'" />
+                                </div>
                             </div>
-                            <div class="form-check mt-2">
-                                <input class="form-check-input" type="checkbox" value="" id="JammingRoom" (click)="checkBox($event)">
-                                <label class="form-check-label" for="JammingRoom">
-                                    Jamming Room
-                                </label>
-                                <input type="text" class="ms-3 " id="JammingRoom" [ngClass]="checkValue =='JammingRoom' ?'d-block':'d-none'">
+
+                            <div class="d-flex align-items-center">
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" id="JammingRoom" #JammingRoom
+                                        (change)="checkBox(JammingRoom.id)" />
+                                    <label class="form-check-label" for="JammingRoom">
+                                        Jamming Room
+                                    </label>
+                                </div>
+                                <div class="form-group mt-3">
+                                    <input type="text" class="form-control ms-4" id="Address" placeholder="Enter Amount"
+                                        [ngClass]="checkValue1 ? 'd-block' : 'd-none'" />
+                                </div>
                             </div>
-                            <div class="form-check mt-2">
-                                <input class="form-check-input" type="checkbox" value="" id="Mixing" (click)="checkBox($event)">
-                                <label class="form-check-label" for="Mixing">
-                                    Mixing and Mastering Room
-                                </label>
-                                <input type="text" class="ms-3 " id="Mixing" [ngClass]="checkValue == 'Mixing' ?'d-block':'d-none'">
+                            <div class="d-flex align-items-center">
+                                <div class="form-check mt-2">
+                                    <input class="form-check-input" type="checkbox" id="Mixing" #Mixing
+                                        (change)="checkBox(Mixing.id)" />
+                                    <label class="form-check-label" for="Mixing">
+                                        Mixing and Mastering Room
+                                    </label>
+                                </div>
+                                <div class="form-group mt-3">
+                                    <input type="text" class="form-control ms-4"  placeholder="Enter Amount"
+                                        [ngClass]="checkValue2 ? 'd-block' : 'd-none'" />
+                                </div>
                             </div>
                         </div>
                     </div>
                     <!-- submit and Cancel button -->
-                    <div class="button my-2 my-lg-5 d-flex justify-content-end ">
-                        <button type="button" class="btn btn-outline-info me-3 ">Cancel</button>
-                        <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap ">Save</button>
+                    <div class="button my-2 my-lg-5 d-flex justify-content-end">
+                        <button type="button" class="btn btn-outline-info me-3">
+                            Cancel
+                        </button>
+                        <button type="submit" class="btn btn-primary btn-gradient border-0 text-nowrap">
+                            Save
+                        </button>
                     </div>
                 </div>
             </div>
