feat:location users usertype model created

--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -26,7 +26,7 @@
             <div class="row">
                 <!-- FirstName -->
                 <div class="col-12 col-sm-6">
-                    <div class="form-group">
+                    <div class="form-group mt-3">
                         <label for="FirstName" class="fw-bold ">First Name <span class="text-danger"> *</span></label>
                         <input type="text" class="form-control" id="FirstName" placeholder="First Name">
                     </div>
