--- a/src/app/core/component/header/header.component.html
+++ b/src/app/core/component/header/header.component.html
@@ -3,7 +3,7 @@
   <div class="d-flex justify-content-between align-items-center p-2 ">
     <!-- 1rhythm Logo -->
     <div class="logo ms-3 cursor-pointer">
-      <img src="./../../../../assets/images/1Rhythm logo.svg" alt="1Rhythm logo" />
+      <img src="./../../../../assets/images/1Rhythm logo.svg" alt="1Rhythm logo"  routerLink="/"/>
     </div>
     <!-- End 1rhythm Logo -->
     <!-- desktop -->
@@ -11,15 +11,15 @@
       <ul class="nav">
         <li class="nav-item d-flex align-items-center  ">
           <img src="./../../../../assets/images/home.svg" alt="home-icon" />
-          <a routerLink="/" routerLinkActive="text-primary"><span class="nav-link fw-light ms-0 text-primary" >Home</span></a>
+          <a routerLink="/"><span class="nav-link fw-light ms-0 text-primary">Home</span></a>
         </li>
         <li class="nav-item d-flex align-items-center ">
           <img src="./../../../../assets/images/Studio.svg" alt="studio-icon" />
-          <a href="http://"><span class="nav-link fw-light ">Studio</span></a>
+          <a routerLink="studio/studio-list"><span class="nav-link fw-light ">Studio</span></a>
         </li>
         <li class="nav-item d-flex align-items-center ">
           <img src="./../../../../assets/images/noun-artist-1191144 1.svg" alt="Artist-icon" />
-          <a href="http://"><span class="nav-link fw-light ">Artist</span></a>
+          <a routerLink="artist/artist-list"><span class="nav-link fw-light ">Artist</span></a>
         </li>
         <li class="nav-item d-flex align-items-center ms-4">
           <img src="./../../../../assets/images/noun-calendar-2095603 4.svg" alt="BookingHistory-icon" />
